--- a/app/globals.css
+++ b/app/globals.css
@@ -17,3 +17,9 @@
   border: 1px solid black;
   background-color: white;
 }
+
+.rectangle.selected,
+.circle.selected {
+  border-color: blue; /* 선택된 도형의 테두리 색상 변경 */
+  box-shadow: 0 0 5px blue; /* 선택된 도형에 그림자 효과 추가 */
+}
